# rust-cargo-dependencies-bug

./: Cargo.toml  README.md
src/: lib.rs
