[package]
name = "cargo-dependencies-bug"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Cargo dependencies bug"
license = "Apache-2.0 OR MIT"

[dependencies]
futures-util = { version = "0.3", default-features = false, features = [] }

[dev-dependencies]
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
